2008-06-26  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-indexer.c:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-process.c:
	* src/trackerd/tracker-process.h: Remove all functions in
	tracker-process and clean up any place that depends on functions
	from there currently.

2008-06-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-query-tree.c: Replaced a g_value_get_pointer
	with a g_value_get_object. It seems that the indexer instance is
	nowadays a GObject rather than a arbritary pointer.

2008-06-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Giving out correct ifaces
	with correct attachments for service-specific database connections

2008-06-26  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-db.c: 
	* src/trackerd/tracker-indexer.[ch]: 
	* src/trackerd/tracker-main.[ch]: 
	* src/trackerd/tracker-monitor.c:
	* src/trackerd/tracker-query-tree.[ch]:
	* src/trackerd/tracker-search.[ch]: Refactored the TrackerIndexer
	code and API so we now use GObject and do proper type checking in
	the query tree code. The indexer API has been cut down to cater
	JUST the daemons needs here. All the indexing code is in the
	indexer instead now.

2008-06-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* svn merge -r 1726:1769 ../xesam-support

2008-06-26  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-db-email.c:
	* src/trackerd/tracker-db-email.h:
	* src/trackerd/tracker-email-evolution.c:
	* src/trackerd/tracker-email-kmail.c:
	* src/trackerd/tracker-email-modest.c:
	* src/trackerd/tracker-email-plugin.h:
	* src/trackerd/tracker-email-thunderbird.c:
	* src/trackerd/tracker-email-utils.c:
	* src/trackerd/tracker-email-utils.h:
	* src/trackerd/tracker-email.c:
	* src/trackerd/tracker-email.h:
	* src/trackerd/tracker-main.c: 