@@ -1,3 +1,9 @@
+2008-06-26  Ivan Frade  <ivan.frade@nokia.com>
+	
+	* tests/libtracker-db/run-test-in-tmp-dir.sh
+	* tests/libtracker-db/tracker-db-manager-test-attach.c:
+	Added more tests.
+	
 2008-06-26  Martyn Russell  <martyn@imendio.com>
 
 	* src/trackerd/tracker-db.c:
